--- a/src/components/Grid.astro
+++ b/src/components/Grid.astro
@@ -1,5 +1,4 @@
 ---
-// src/components/Grid.astro
 import Cards from './Cards.astro';
 import type { PokemonBasic } from '../types/pokemon';
 
@@ -10,7 +9,7 @@ interface Props {
 const { pokemons } = Astro.props;
 ---
 
-<div class="container mx-auto px-4"> <!-- Added container and padding -->
+<div class="container mx-auto px-4"> 
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8 md:gap-10 py-6">
         {pokemons.map((pokemon) => (
             <Cards pokemon={pokemon} />
