--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -8,7 +8,7 @@ import pokemon from "../assets/pokemon.logo.png";
             <img src={pokemon.src} alt="Pokemon logo" class="mx-auto" />
         </div>
         <div class="p-10 text-center">
-            <a href="/home" class="mt-4 inline-block bg-blue-500 text-white py-4 px-6 text-sm uppercase tracking-wider cursor-pointer rounded-lg flex items-center">
+            <a href="/home" class="mt-4 inline-block bg-blue-500 text-white py-4 px-6 text-sm uppercase tracking-wider cursor-pointer rounded-lg inline-flex items-center">
                 <button>Home</button>
             </a>
         </div>
