--- a/src/components/Details.astro
+++ b/src/components/Details.astro
@@ -1,6 +1,12 @@
 ---
-// src/components/Details.astro
-import type { PokemonBasic, PokemonDetails, PokemonStats } from '../types/pokemon';
+import type { 
+  PokemonBasic,
+  PokemonType, 
+  PokemonTypeString, 
+  PokemonDetails, 
+  PokemonStats 
+} from '../types/pokemon';
+import { getTypeColor } from '../types/pokemon';
 
 interface Props {
   id: string;
@@ -8,6 +14,12 @@ interface Props {
 }
 
 const { id, pokemon } = Astro.props;
+
+// Types
+const response = await fetch(pokemon.url);
+const pokemonData = await response.json();
+const types: PokemonTypeString[] = pokemonData.types.map((type: PokemonType) => type.type.name as PokemonTypeString);
+
 
 let detailsPokemon: PokemonStats | null = null;
 let error: string | null = null;
@@ -30,42 +42,62 @@ try {
 }
 ---
 
-{error ? (
-  <div class="max-w-2xl mx-auto bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
-    <strong class="font-bold">Error!</strong>
-    <span class="block sm:inline"> {error}</span>
-    <a href="/home" class="block mt-4 text-red-700 underline">Return to Home</a>
-  </div>
-) : (
-  <div class="max-w-2xl mx-auto bg-yellow-400 rounded-lg p-6">
-    <div class="text-center">
-      <img 
-        src={`https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${id}.png`}
-        alt={pokemon.name}
-        class="w-48 h-48 mx-auto"
-      />
-      <h1 class="text-3xl font-bold capitalize mb-6">{pokemon.name}</h1>
+<div class="bg-gradient-to-b from-sky-300 to-sky-500">
+  {error ? (
+    <div class="max-w-2xl mx-auto bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative"  role="alert">
+      <strong class="font-bold">Error!</strong>
+      <span class="block sm:inline"> {error}</span>
+      <a href="/home" class="block mt-4 text-red-700 underline">Return to Home</a>
     </div>
+  ) : (
+    <div class="min-h-screen w-full h-full fixed inset-0 bg-gradient-to-b from-sky-300 to-sky-500">
+        <div class="min-h-screen flex justify-center flex-col">
+          <div class="max-w-[500px] w-full mx-auto p-4">
+            <div class="bg-yellow-400 rounded-xl border-2 border-yellow-600">
+              <div class="text-center bg-gradient-to-r from-yellow-200 to-yellow-300 m-3 rounded-lg p-4">
+                <img 
+                  src={`https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${id}.png`}
+                  alt={pokemon.name}
+                  class="w-[200px] h-[200px] inline-block"
+                />
+              </div>
 
-    <div id="statsContainer" class="grid grid-cols-2 gap-4 bg-[#dbc76a] p-6 rounded-lg">
-      <h3 class="text-lg">HP: {detailsPokemon?.hp}</h3>
-      <h3 class="text-lg">Attack: {detailsPokemon?.attack}</h3>
-      <h3 class="text-lg">Defense: {detailsPokemon?.defense}</h3>
-      <h3 class="text-lg">Speed: {detailsPokemon?.speed ?? 'Does not have speed'}</h3>
-      <h3 class="text-lg">Height: {detailsPokemon?.height ?? 'Does not have height'}</h3>
-      <h3 class="text-lg">Weight: {detailsPokemon?.weight ?? 'Does not have weight'}</h3>
-    </div>
+              <div id="statsContainer" class="bg-[#f4e4bc] mx-3 mb-3 p-4 rounded-lg">
+                <h1 class="text-2xl font-bold capitalize text-center mb-4">{pokemon.name}</h1>
 
-    <div class="mt-6 text-center">
-      <a 
-        href="/home" 
-        class="inline-block bg-yellow-500 hover:bg-yellow-600 text-black px-6 py-2 rounded-lg transition-colors"
-      >
-        Back to List
-      </a>
-    </div>
+                <div class="grid grid-cols-2 gap-4 text-center">
+                  <h3 class="text-lg font-bold">HP: {detailsPokemon?.hp}</h3>
+                  <h3 class="text-lg font-bold">Attack: {detailsPokemon?.attack}</h3>
+                  <h3 class="text-lg font-bold">Defense: {detailsPokemon?.defense}</h3>
+                  <h3 class="text-lg font-bold">Speed: {detailsPokemon?.speed ?? 'Does not have speed'}</h3>
+                  <h3 class="text-lg font-bold">Height: {detailsPokemon?.height ?? 'Does not have height'}</h3>
+                  <h3 class="text-lg font-bold">Weight: {detailsPokemon?.weight ?? 'Does not have weight'}</h3>
+                </div>
+
+                <div class="flex flex-wrap gap-2 justify-center mb-4 pt-10"> 
+                {types.map((type: PokemonTypeString) => (
+                  <span class={`px-3 py-1 rounded text-white text-sm ${getTypeColor(type)}`}>
+                    {type}
+                  </span>
+                ))}
+              </div>
+              </div>
+          </div>
+        </div>
+   
+
+          <div class="mt-6 text-center">
+            <a 
+              href="/home" 
+              class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black px-6 py-2 rounded-lg transition-colors"
+            >
+              Back to List
+            </a>
+          </div>
+        </div>
   </div>
-)}
+  )}
+</div>
 
 <style>
   .opacity-0 {
