--- a/src/components/Navheader.astro
+++ b/src/components/Navheader.astro
@@ -5,17 +5,12 @@ import Search from "./Search.astro";
 ---
 
 <nav class="m-2.5 p-2.5">
-    <div class="bg-yellow-500 flex flex-row justify-between items-center p-4.5 rounded-3xl">
-        <div>
-            <img src={pokemonNav.src} class="w-2/5 h-auto"/>
+    <div class="bg-yellow-400 flex flex-row justify-between items-center p-4 rounded-2xl">
+        <div class="w-40 ml-4">
+            <img src={pokemonNav.src} class="h-auto"/>
         </div>
-        <div>
+        <div class="flex mx-8">
             <Search />
-        </div>
-        <div>
-            <a href="/pokemon">
-                <button class="h-10 p-4.5 text-sm uppercase tracking-wider cursor-pointer rounded-lg flex items-center">Add Pokemon</button>
-            </a>
         </div>
     </div>
 </nav>
