--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -1,10 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import HomeComponent from "../components/HomeComponent.astro";
+
+const currentPage = Number(Astro.url.searchParams.get('page')) || 1;
 ---
 
 <Layout>
     <main>
-        <HomeComponent />
+        <HomeComponent currentPage={currentPage}/>
     </main>
 </Layout>
