Pagination - must fixed some styles with interactions

--- a/src/components/Grid.astro
+++ b/src/components/Grid.astro
@@ -1,6 +1,6 @@
 ---
 import Cards from './Cards.astro';
-import type { PokemonBasic } from '../types/pokemon';
+import type { PokemonBasic } from '../pokemondata/pokemons/allpokemon';
 
 interface Props {
     pokemons: PokemonBasic[];
