--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import HomeComponent from "../components/HomeComponent.astro";
 
-const currentPage = Number(Astro.url.searchParams.get('page')) || 1;
+const currentPage = 1;  // This will always be page 1
 ---
 
 <Layout>
