--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -1,36 +1,29 @@
 ---
-import type { PokemonType, PokemonBasic, PokemonTypeString } from '../types/pokemon';
-import { getTypeColor } from '../types/pokemon';
+import { getPokemonId, getPokemonImageUrl } from '../pokemondata/pokemons/allpokemon';
+import { getTypeColor } from '../pokemondata/pokemons/pokemonTypes';
+import type { PokemonTypeString } from '../pokemondata/pokemons/pokemonTypes';
 
-interface Props {
-  pokemon: {
-    name: string;
-    url: string;
-  }
+interface PokemonBasic {
+  name: string;
+  url: string;
+  types?: PokemonTypeString[];
 }
 
 interface Props {
-  pokemon: PokemonBasic 
+  pokemon: PokemonBasic
 }
 
 const { pokemon } = Astro.props;
 
-const getId = () => {
-  return pokemon.url.split('/')[6];
-}
-
-// Fetch pokemon details to get types
-const response = await fetch(pokemon.url);
-const pokemonData = await response.json();
-const types: PokemonTypeString[] = pokemonData.types.map((type: PokemonType) => type.type.name as PokemonTypeString);
-
+const id = getPokemonId(pokemon.url);
+const imageUrl = getPokemonImageUrl(id);
 ---
 
-<a href={`/pokemon/${getId()}`} class="block p-4"> 
+<a href={`/pokemon/${id}`} class="block p-4"> 
   <div class="pokemon-card w-full max-w-[350px] h-auto mx-auto rounded-xl bg-yellow-400 transform transition-transform hover:scale-105 border-2 border-yellow-600" data-name={pokemon.name}>
     <div class="text-center bg-gradient-to-r from-yellow-200 to-yellow-300 rounded-lg p-4 m-3"> 
       <img 
-        src={`https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${getId()}.png`}
+        src={imageUrl}
         alt={pokemon.name}
         class="w-[150px] sm:w-[200px] h-[150px] sm:h-[200px] inline-block"
       />
@@ -42,7 +35,7 @@ const types: PokemonTypeString[] = pokemonData.types.map((type: PokemonType) => 
       </h2>
       
       <div class="flex flex-wrap gap-2 justify-center"> 
-        {types.map((type: PokemonTypeString) => (
+        {pokemon.types?.map((type: PokemonTypeString) => (
           <span class={`px-3 py-1 rounded text-white text-sm ${getTypeColor(type)}`}>
             {type}
           </span>
